crates/ignis_analyzer/tests/snapshots/fixtures__fixture_enum_drop_diags.snap
---
source: crates/ignis_analyzer/tests/fixtures.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0132: type 'Status' declares @implements(Drop) but has no 'drop' method
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:118-147
