crates/ignis_analyzer/tests/snapshots/fixtures__fixture_enum_eq_wrong_signature_diags.snap
---
source: crates/ignis_analyzer/tests/fixtures.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0133: Eq method 'equals' has wrong signature: expected 'equals(&self, &WrongEq): boolean', got 'equals(&self, i32): bool'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:164-227
