crates/ignis_analyzer/tests/snapshots/fixtures__fixture_generic_type_alias_diags.snap
---
source: crates/ignis_analyzer/tests/fixtures.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[WARN] A0122: unused variable 'box'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:530-567
[WARN] A0122: unused variable 'boxAlias'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:608-662
[WARN] A0122: unused variable 'first'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:700-736
[WARN] A0122: unused variable 'y'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:775-805
