crates/ignis_analyzer/tests/snapshots/fixtures__fixture_if_else_both_return_diags.snap
---
source: crates/ignis_analyzer/tests/fixtures.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] I0043: Undefined type 'bool'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:90-91
