crates/ignis_analyzer/tests/snapshots/fixtures__fixture_if_else_only_then_returns_diags.snap
---
source: crates/ignis_analyzer/tests/fixtures.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[WARN] A0039: Missing return statement
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:96-113
  label: Function should return a value at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:96-113
[ERROR] I0043: Undefined type 'bool'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:108-112
[WARN] A0122: unused variable 'y'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:161-176
