crates/ignis_analyzer/tests/snapshots/fixtures__fixture_if_without_else_diags.snap
---
source: crates/ignis_analyzer/tests/fixtures.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[WARN] A0039: Missing return statement
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:98-115
  label: Function should return a value at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:98-115
