crates/ignis_analyzer/tests/snapshots/fixtures__fixture_immutable_assign_diags.snap
---
source: crates/ignis_analyzer/tests/fixtures.rs
assertion_line: 27
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0013: Cannot assign to immutable variable 'x'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:114-119
