crates/ignis_analyzer/tests/snapshots/fixtures__fixture_invalid_cast_diags.snap
---
source: crates/ignis_analyzer/tests/fixtures.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] I0043: Undefined type 'bool'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:79-83
[WARN] A0122: unused variable 'y'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:96-118
