crates/ignis_analyzer/tests/snapshots/fixtures__fixture_match_guarded_arm_diags.snap
---
source: crates/ignis_analyzer/tests/fixtures.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[WARN] A0039: Missing return statement
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:152-172
  label: Function should return a value at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:152-172
